@startuml
skinparam linetype ortho

class Users {
  +user_uuid : UUID
  username : TEXT
  password : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class Devices {
  +device_uuid : UUID
  user_uuid : UUID
  device_name : TEXT
  public_key : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class Rooms {
  +room_uuid : UUID
  room_name : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class Messages {
  +message_uuid : UUID
  room_uuid : UUID
  sender_user_uuid : UUID
  encrypted_content : BYTEA
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class MessageKeys {
  +message_key_uuid : UUID
  message_uuid : UUID
  device_uuid : UUID
  encrypted_symmetric_key : BYTEA
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

' Отношения
Users "1" --> "0..*" Devices : has devices
Rooms "1" --> "0..*" Messages : contains messages
Users "1" --> "0..*" Messages : sends messages
Messages "1" --> "0..*" MessageKeys : has keys
Devices "1" --> "0..*" MessageKeys : can read keys

@enduml
